# meal-planner-cpp

./: .gitignore  CMakeLists.txt  README.md
data/: alias_ingredients.json  categories.json  dietary_tags.json  equipment_catalog.json  feedback.json  ingredients.json  meal_plans.json  nutrients.json  pantry.json  price_index.json  recipes.json  sample_user.json  shopping_lists.json  skills.json  units.json
include/application/: BalancedMealPlanner.h  IMealPlanner.h
include/core/: Cost.h  Cuisine.h  Difficulty.h  Equipment.h  Ingredient.h  IngredientDatabase.h  IngredientDatabaseEntry.h  JsonConverters.h  MacroRatios.h  MealPlan.h  NutritionCalculator.h  NutritionUnits.h  NutritionUtils.h  Quantity.h  Recipe.h  Time.h  Unit.h  UserProfile.h
include/infrastructure/: IRecipeRepository.h  JsonDataLoader.h
include/interface/cli/: MealPlannerCLI.h
include/interface/presenter/: IMealPlanFormatter.h  JsonMealPlanFormatter.h  MarkdownMealPlanFormatter.h  MealPlanPresenter.h  TextMealPlanFormatter.h
include/util/: DataValidation.h
src/: main.cpp
src/application/: BalancedMealPlanner.cpp
src/core/: IngredientDatabase.cpp  MealPlan.cpp  NutritionCalculator.cpp  NutritionUtils.cpp
src/infrastructure/: JsonDataLoader.cpp
src/interface/cli/: MealPlannerCLI.cpp  main.cpp
src/interface/presenter/: JsonMealPlanFormatter.cpp  MarkdownMealPlanFormatter.cpp  MealPlanPresenter.cpp  TextMealPlanFormatter.cpp
